[package]
name = "wasml"
version = "1.0.0"
authors = ["Robbie Symonds <hello@robbiesymonds.me>"]
description = "WASM-powered reinforcement learning library written in Rust."
repository = "https://github.com/robbiesymonds/WASML"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"